--- a/Dev Profile/Base.lproj/Main.storyboard
+++ b/Dev Profile/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,24 +15,52 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Dev_Profile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Devslopes BG - June 2017-1920x1080" translatesAutoresizingMaskIntoConstraints="NO" id="C4j-Pl-tEU">
-                                <rect key="frame" x="0.0" y="0.0" width="354" height="190"/>
+                                <rect key="frame" x="0.0" y="0.0" width="362" height="250"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="Ope-tG-dZ7"/>
                                     <constraint firstAttribute="height" constant="190" id="jMM-Su-sdE"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Ope-tG-dZ7"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="Ope-tG-dZ7"/>
+                                        <exclude reference="jMM-Su-sdE"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="24i-bL-Huf">
-                                <rect key="frame" x="16" y="125" width="100" height="100"/>
+                                <rect key="frame" x="16" y="185" width="180" height="180"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="1ec-os-aUh"/>
-                                    <constraint firstAttribute="width" constant="100" id="NLf-aL-pT1"/>
+                                    <constraint firstAttribute="width" constant="180" id="7C4-0c-Kew"/>
+                                    <constraint firstAttribute="height" constant="180" id="WqE-Dh-47L"/>
+                                    <constraint firstAttribute="width" constant="100" id="syJ-t2-i14"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="7C4-0c-Kew"/>
+                                        <exclude reference="WqE-Dh-47L"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="constraints">
+                                        <exclude reference="1ec-os-aUh"/>
+                                        <include reference="7C4-0c-Kew"/>
+                                        <include reference="WqE-Dh-47L"/>
+                                        <exclude reference="syJ-t2-i14"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9F-jr-RiN">
-                                <rect key="frame" x="126" y="186.5" width="94" height="27.5"/>
+                                <rect key="frame" x="206" y="268" width="150" height="44"/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -41,10 +69,10 @@
                                 </variation>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wLz-y6-m54" userLabel="Stack View 1">
-                                <rect key="frame" x="22" y="315" width="310" height="150"/>
+                                <rect key="frame" x="26" y="382.5" width="310" height="250"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="Do3-oz-aCZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="250"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="fmi-J7-4Rx"/>
                                             <constraint firstAttribute="width" secondItem="Do3-oz-aCZ" secondAttribute="height" multiplier="1:1" id="t36-JO-YWR"/>
@@ -56,7 +84,7 @@
                                         </variation>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="tIg-XP-7vG">
-                                        <rect key="frame" x="160" y="0.0" width="150" height="150"/>
+                                        <rect key="frame" x="160" y="0.0" width="150" height="250"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -74,10 +102,10 @@
                                 </variation>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="e5R-fn-woV" userLabel="Stack View 2">
-                                <rect key="frame" x="22" y="475" width="310" height="150"/>
+                                <rect key="frame" x="26" y="642.5" width="310" height="250"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="ELv-sA-wgA">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="250"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="H8m-WU-KRV"/>
                                             <constraint firstAttribute="width" secondItem="ELv-sA-wgA" secondAttribute="height" multiplier="1:1" id="HCb-mI-CGa"/>
@@ -89,7 +117,7 @@
                                         </variation>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="s2r-tf-DHI">
-                                        <rect key="frame" x="160" y="0.0" width="150" height="150"/>
+                                        <rect key="frame" x="160" y="0.0" width="150" height="250"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -107,7 +135,7 @@
                                 </variation>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="6IO-DU-ogX" userLabel="Actions">
-                                <rect key="frame" x="63" y="235" width="228" height="75"/>
+                                <rect key="frame" x="106" y="257.5" width="228" height="75"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdv-Z1-jCS">
                                         <rect key="frame" x="0.0" y="0.0" width="58" height="75"/>
@@ -127,13 +155,13 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hHg-DV-ocf">
-                                <rect key="frame" x="269" y="954" width="230" height="60"/>
+                                <rect key="frame" x="56" y="962.5" width="250" height="80"/>
                                 <color key="backgroundColor" red="0.84881085157394409" green="0.27903127670288086" blue="0.11919202655553818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="230" id="TE3-0p-4Et"/>
-                                    <constraint firstAttribute="height" constant="60" id="paY-pN-PrD"/>
+                                    <constraint firstAttribute="width" constant="250" id="TE3-0p-4Et"/>
+                                    <constraint firstAttribute="height" constant="80" id="paY-pN-PrD"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="22"/>
                                 <state key="normal" title="Customize Dashboard">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -144,6 +172,7 @@
                             <constraint firstItem="6IO-DU-ogX" firstAttribute="top" secondItem="24i-bL-Huf" secondAttribute="bottom" constant="10" id="0Iw-5O-abA"/>
                             <constraint firstItem="6IO-DU-ogX" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="20" id="1Jv-3g-wvo"/>
                             <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="25" id="Da4-nr-l6Z"/>
+                            <constraint firstItem="24i-bL-Huf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="165" id="FUo-bN-PzN"/>
                             <constraint firstItem="P9F-jr-RiN" firstAttribute="centerY" secondItem="24i-bL-Huf" secondAttribute="centerY" constant="15" id="HTZ-8F-pqZ"/>
                             <constraint firstItem="24i-bL-Huf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="105" id="MEW-eV-Mt1"/>
                             <constraint firstItem="hHg-DV-ocf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="N3k-rf-BBw"/>
@@ -161,6 +190,9 @@
                             <constraint firstItem="e5R-fn-woV" firstAttribute="top" secondItem="wLz-y6-m54" secondAttribute="bottom" constant="10" id="eXW-Gp-Lpq"/>
                             <constraint firstItem="6IO-DU-ogX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f7g-nj-17v"/>
                             <constraint firstItem="C4j-Pl-tEU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fIl-qW-XJT"/>
+                            <constraint firstItem="wLz-y6-m54" firstAttribute="top" secondItem="6IO-DU-ogX" secondAttribute="bottom" constant="5" id="g1D-ba-nJV"/>
+                            <constraint firstItem="wLz-y6-m54" firstAttribute="top" secondItem="6IO-DU-ogX" secondAttribute="bottom" constant="50" id="nVl-mq-OgU"/>
+                            <constraint firstItem="hHg-DV-ocf" firstAttribute="top" secondItem="e5R-fn-woV" secondAttribute="bottom" constant="70" id="z0B-TR-yde"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <variation key="default">
@@ -168,8 +200,10 @@
                                 <exclude reference="hHg-DV-ocf"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="FUo-bN-PzN"/>
                                 <exclude reference="HTZ-8F-pqZ"/>
                                 <exclude reference="RTr-k2-oGn"/>
+                                <exclude reference="nVl-mq-OgU"/>
                                 <exclude reference="1Jv-3g-wvo"/>
                                 <exclude reference="Nqe-zI-7Ir"/>
                             </mask>
@@ -179,8 +213,14 @@
                                 <include reference="hHg-DV-ocf"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="FUo-bN-PzN"/>
+                                <exclude reference="MEW-eV-Mt1"/>
                                 <exclude reference="Da4-nr-l6Z"/>
                                 <include reference="HTZ-8F-pqZ"/>
+                                <exclude reference="Ovx-Bd-oDQ"/>
+                                <exclude reference="g1D-ba-nJV"/>
+                                <include reference="nVl-mq-OgU"/>
+                                <exclude reference="0Iw-5O-abA"/>
                                 <include reference="1Jv-3g-wvo"/>
                                 <include reference="Nqe-zI-7Ir"/>
                                 <exclude reference="f7g-nj-17v"/>
@@ -190,7 +230,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3661.5999999999999" y="-2656.8215892053977"/>
+            <point key="canvasLocation" x="3152" y="-2647"/>
         </scene>
     </scenes>
     <resources>
